# hakyll-series

./: LICENSE  README.md  hakyll-series.cabal  stack.yaml
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html
docs/series/: examples.html  things.html
posts/: 2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.markdown  2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.markdown
site/: site.cabal  site.hs  stack.yaml
site/posts/: 2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.markdown  2015-12-07-tu-quoque.markdown
site/templates/: post.html
src/Hakyll/Web/: Series.hs
templates/: post.html  series.html
