name:               hakyll-series
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , hakyll-series
  ghc-options:      -threaded
  default-language: Haskell2010

library
  hs-source-dirs:   src
  exposed-modules:  Hakyll.Web.Series
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , containers >= 0.5
                  , blaze-html >= 0.8