name:               hakyll-series
version:            0.1.0.0
synopsis:           Adds series functionality to hakyll
build-type:         Simple
cabal-version:      >= 1.10
homepage:           https://github.com/oisdk/hakyll-series
license:            MIT
license-file:       LICENSE
author:             Donnacha Oisin Kidney
copyright:          MIT
category:           Web

library
  hs-source-dirs:   src
  exposed-modules:  Hakyll.Web.Series
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , containers >= 0.5
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/hakyll-series